--- a/All Project Code & Components/src/package.json
+++ b/All Project Code & Components/src/package.json
@@ -10,7 +10,8 @@
         "express": "^4.6.1",
         "express-session": "1.17.3",
         "pg-promise": "^10.11.1",
-        "nodemon": "2.0.20"
+        "nodemon": "2.0.20",
+        "spotify-web-api-node": "^5.0.0"
     },
     
     "devDependencies": {
